# bhd_vdf

./: .gitignore  CMakeLists.txt  README.md  chiapos-improved.patch  chiavdf-improved.patch
src/: simple_test.cpp  vdf_computer.cpp  vdf_computer.h  vdf_test.cpp  vdf_utils.cpp  vdf_utils.h
